update mini tabs text color to prevent tabs text from becoming invisible in dark mode

--- a/scss/vendor-extensions/bootstrap-3.scss
+++ b/scss/vendor-extensions/bootstrap-3.scss
@@ -319,7 +319,7 @@ blockquote footer, blockquote small, blockquote .small {
       border: none;
       a {
         background-color: white;
-        color: #333;
+        color: rgba(51,51,51,0.999999); // this hack is to prevent SASS from converting to #333, and we don't want #333 because color module will replace it with the headings color in the palette.
         padding: 8px;
         text-transform: uppercase;
         font-size: 12px;
@@ -328,7 +328,7 @@ blockquote footer, blockquote small, blockquote .small {
         pointer-events: auto;
         &:hover,
         &:focus {
-          color: #777;
+          text-decoration: underline;
         }
       }
       &.active {
@@ -338,7 +338,7 @@ blockquote footer, blockquote small, blockquote .small {
         }
       }
       &.active a {
-        color: $primary;
+        color: rgba(51,51,51,0.999999);
       }
     }
   }
